tests/fail/d006_fix_not_function.dew
# D006: fix requires a function type, found Int
def main = fix f: Int {
    42
}
